Correcting the decimal problem; Adding modulo

--- a/main.css
+++ b/main.css
@@ -59,3 +59,8 @@
         #equals{
             background-color: orange;
         }
+        
+        h1{
+            color: red;
+            margin-left: 14.9cm;
+        }
