Aligning calculator to centre

--- a/main.css
+++ b/main.css
@@ -4,8 +4,8 @@
         
         
         #container{
-            margin: 40px;
-            margin-left: 10cm;
+            margin: auto;
+            margin-top: 40px;
             height: 11cm;
             width: 11cm;
             background-color: grey;
